21-GKE-Gateway-API/09-GKE-Gateway-API-HealthChecks-SessionAffinity/p2-regional-k8sresources-yaml/c2-02-gateway-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: route-external-http
spec:
  parentRefs:
  - kind: Gateway
    name: mygateway1-regional
    sectionName: https
  rules:
  - backendRefs:
    - name: myapp1-service
      port: 80
